@@ -2,6 +2,7 @@
 
 == master
 
+- Resolves: gh#239 it is now possible to comment sleeps
 - No longer using `android:onClick`, which is broken on older versions of Android
 
 == 7.2.5
